Bug 1916350 - [devtools] Adapt toolbox toolbar buttons to High Contrast Mode. r=devtools-reviewers,bomsy.
Also remove an old -moz-focus-inner rule, as well as the :active state for those buttons,
as they make the togglable buttons "blink", and we don't have active style for other buttons or tabs.

Depends on D228151

Differential Revision: https://phabricator.services.mozilla.com/D228943

--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -387,18 +387,14 @@
   background-repeat: no-repeat;
 }
 
-.devtools-tabbar-button::-moz-focus-inner {
-  border: none;
-}
-
-.devtools-tabbar-button:hover,
-.devtools-tabbar-button.checked {
+.devtools-tabbar-button:hover {
   background-color: var(--theme-toolbar-hover);
+  color: var(--theme-toolbar-hover-color);
 }
 
-.devtools-tabbar-button.checked,
-.devtools-tabbar-button:active {
-  color: var(--theme-icon-checked-color);
+.devtools-tabbar-button.checked {
+  color: var(--toolbarbutton-checked-color);
+  background-color: var(--toolbarbutton-checked-background);
 }
 
 .devtools-tabbar-button:disabled {
